Update footer logo alt text for improved accessibility

--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@
           <div class="footer__column footer__logo">
             <img
               src="./images/logo_white.svg"
-              alt="Logotipo de la Biblioteca Triple Peaks"
-              class="footer__logo"
+              alt="Logotipo blanco de la Biblioteca Triple Peaks"
             />
           </div>
           <div class="footer__column footer__column_content_hours">
