--- a/index.html
+++ b/index.html
@@ -282,10 +282,11 @@
       </main>
       <footer class="footer" id="footer">
         <div class="footer__columns">
-          <div class="footer__column footer__logo">
+          <div class="footer__column">
             <img
               src="./images/logo_white.svg"
               alt="Logotipo blanco de la Biblioteca Triple Peaks"
+              class="footer__logo"
             />
           </div>
           <div class="footer__column footer__column_content_hours">
